--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,73 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+attrs==25.3.0
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+easyocr==1.7.2
+filelock==3.19.1
+frozenlist==1.7.0
+fsspec==2025.9.0
+google-api-core==2.25.1
+google-api-python-client==2.183.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.70.0
+httplib2==0.31.0
+idna==3.10
+imageio==2.37.0
+Jinja2==3.1.6
+lazy_loader==0.4
+MarkupSafe==3.0.3
+mpmath==1.3.0
+multidict==6.6.4
+networkx==3.5
+ninja==1.13.0
+numpy==1.26.4
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+opencv-python-headless==4.12.0.88
+packaging==25.0
+pillow==11.3.0
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==6.32.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pyclipper==1.3.0.post6
+pyparsing==3.2.5
 PySide6==6.6.0
+PySide6-Addons==6.6.0
+PySide6-Essentials==6.6.0
+python-bidi==0.6.6
+PyYAML==6.0.3
+qasync==0.28.0
+requests==2.32.5
+rsa==4.9.1
+scikit-image==0.25.2
+scipy==1.16.2
+setuptools==80.9.0
+shapely==2.1.2
+shiboken6==6.6.0
+sympy==1.14.0
+tifffile==2025.9.30
+torch==2.8.0
+torchvision==0.23.0
+triton==3.4.0
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.5.0
+yarl==1.20.1
